--- a/manifest.json
+++ b/manifest.json
@@ -18,9 +18,13 @@
       "https://www.twitch.tv/broadcast",
       "https://www.twitch.tv/messages/*",
       "https://www.twitch.tv/settings"],
-      "js": ["content.js"],
+      "js": ["content-script.js"],
     "run_at": "document_end"
-}],
+  }],
+  "web_accessible_resources": [{
+    "resources": ["script.js"],
+    "matches": ["*://*.twitch.tv/*"]
+  }],
   "permissions": ["storage", "tabs", "scripting"],
   "action": {
     "default_popup": "popup.html",
