--- a/manifest.json
+++ b/manifest.json
@@ -25,21 +25,20 @@
     "resources": ["script.js"],
     "matches": ["*://*.twitch.tv/*"]
   }],
-  "permissions": ["tabs", "scripting"],
+  "permissions": ["tabs", "scripting", "storage"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+      "16": "/images/kiwi16.png",
+      "32": "/images/kiwi32.png",
+      "48": "/images/kiwi48.png",
+      "128": "/images/kiwi128.png"
     }
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
-  },
-  "options_page": "options.html"
+    "16": "/images/kiwi16.png",
+      "32": "/images/kiwi32.png",
+      "48": "/images/kiwi48.png",
+      "128": "/images/kiwi128.png"
+  }
 }
