--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "css-att",
-  "description": "style을 스크립트에서 element에 하나씩 주입하지않고 html에서 모든 태그에 처리합니다",
+  "name": "Twitch Magic Chat - 트위치 채팅 원클릭 복사",
+  "description": "클릭 한 번에 채팅을 복사해오는 확장 프로그램입니다.",
   "version": "1.0.2",
   "manifest_version": 3,
   "host_permissions": ["https://www.twitch.tv/*"],
@@ -8,23 +8,29 @@
     "matches": ["https://www.twitch.tv/*"],
     "service_worker": "background.js"
   },
-  "content_scripts": [{
-    "matches": ["https://www.twitch.tv/*"],
-    "exclude_globs": ["https://www.twitch.tv/directory/*",
-      "https://www.twitch.tv/p/*",
-      "https://www.twitch.tv/products/*",
-      "https://www.twitch.tv/*/manager*",
-      "https://www.twitch.tv/*/dashboard",
-      "https://www.twitch.tv/broadcast",
-      "https://www.twitch.tv/messages/*",
-      "https://www.twitch.tv/settings"],
+  "content_scripts": [
+    {
+      "matches": ["https://www.twitch.tv/*"],
+      "exclude_globs": [
+        "https://www.twitch.tv/directory/*",
+        "https://www.twitch.tv/p/*",
+        "https://www.twitch.tv/products/*",
+        "https://www.twitch.tv/*/manager*",
+        "https://www.twitch.tv/*/dashboard",
+        "https://www.twitch.tv/broadcast",
+        "https://www.twitch.tv/messages/*",
+        "https://www.twitch.tv/settings"
+      ],
       "js": ["content-script.js"],
-    "run_at": "document_end"
-  }],
-  "web_accessible_resources": [{
-    "resources": ["script.js"],
-    "matches": ["https://www.twitch.tv/*"]
-  }],
+      "run_at": "document_end"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["script.js"],
+      "matches": ["https://www.twitch.tv/*"]
+    }
+  ],
   "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html",
@@ -37,8 +43,8 @@
   },
   "icons": {
     "16": "/images/kiwi16.png",
-      "32": "/images/kiwi32.png",
-      "48": "/images/kiwi48.png",
-      "128": "/images/kiwi128.png"
+    "32": "/images/kiwi32.png",
+    "48": "/images/kiwi48.png",
+    "128": "/images/kiwi128.png"
   }
 }
